Tue Jun  8 21:59:16 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlACE/Process_Unix.pm:

          Use the "EXE_SUBDIR" property of the TestTarget object (Process_Win32
          already has this behavior).

        * bin/PerlACE/TestTarget.pm:

          Supporting setting the "ARCH" property on a per-TestTarget basis.
          Added a GetArchDir() method to the TestTarget object.

Tue Jun  8 14:25:56 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * protocols/ace/INet/inet.mpc:

          Install the export header.

Tue Jun 08 08:50:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.cpp:
        * protocols/ace/INet/String_IOStream.cpp:
        * protocols/ace/INet/HTTP_IOStream.cpp:
          Changed static_cast to ACE truncate_cast.

Tue Jun 08 07:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.cpp:
        * protocols/ace/INet/String_IOStream.cpp:
        * protocols/ace/INet/HTTP_IOStream.cpp:
          Changes to silence conversion warnings.

Tue Jun 08 07:16:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.h:
        * protocols/ace/INet/BidirStreamBuffer.cpp:
        * protocols/ace/INet/Sock_IOStream.cpp:
        * protocols/ace/INet/Response.h:
        * protocols/ace/INet/HTTP_URL.h:
        * protocols/ace/INet/HTTP_StreamPolicyBase.h:
        * protocols/ace/INet/HTTP_StreamPolicy.cpp:
        * protocols/ace/INet/StreamInterceptor.cpp:
        * protocols/ace/INet/String_IOStream.h:
        * protocols/ace/INet/ConnectionCache.inl:
        * protocols/ace/INet/HeaderBase.inl:
        * protocols/ace/INet/ConnectionCache.cpp:
        * protocols/ace/INet/HeaderBase.cpp:
        * protocols/ace/INet/HTTP_ClientRequestHandler.inl:
        * protocols/ace/INet/HTTP_ClientRequestHandler.cpp:
        * protocols/ace/INet/RequestHandler.cpp:
        * protocols/ace/INet/HTTP_IOStream.h: